# TactileGlove

./: .clang-format  .clang-tidy  .gitattributes  .pre-commit-config.yaml  HardwareProfile.h  README.md  pyproject.toml  tactGlove.mcw
.github/workflows/: ci.yaml  format.yaml
firmware/: .clang-format  HardwareProfile - Low Pin Count USB Development Kit.h  tactGlove.mcp  usb_config.h  usb_descriptors.c
firmware/PIC18/: HardwareProfile - Low Pin Count USB Development Kit.h  HardwareProfile.h  tactGlove.mcp  tactGlove_main.c  usb_config.h  usb_descriptors.c
firmware/Teensy3.2/64adc_imu-spi_SP/: 64adc_imu-spi_SP.ino
firmware/Teensy3.2/glove64adc_imu-spi_SP/: glove64adc_imu-spi_SP.ino
firmware/Teensy3.2/glove64adc_imu-spi_bend_SP/: glove64adc_imu-spi_bend_SP.ino
firmware/Teensy3.2/glove_64adcMax11131_16bend_imuBNO085_SP/: glove_64adcMax11131_16bend_imuBNO085_SP.ino
firmware/Teensy4.0/glove60tax_16bend_imu_T4/: SPI.cpp  glove60tax_16bend_imu_T4.ino  glove60tax_T4.ino
firmware/Teensy4.0/glove_generic_T4/: glove_generic_T4.ino
linux/: CMakeLists.txt  FindQt54.cmake  README.md  README.org  calib.py  package.xml
linux/GUI/: .gitignore  CMakeLists.txt  ColorMap.cpp  ColorMap.h  FileExistsDialog.cpp  FileExistsDialog.h  FileExistsDialog.ui  GloveViz.pro  GloveWidget.cpp  GloveWidget.h  GloveWidget.ui  InputInterface.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MappingDialog.cpp  MappingDialog.h  MappingDialog.ui  MySpinBox.cpp  MySpinBox.h  QSerialInput.cpp  QSerialInput.h  ROSInput.cpp  ROSInput.h  RandomInput.cpp  RandomInput.h  SerialInput.cpp  SerialInput.h  SerialThread.cpp  SerialThread.h  TactileArray.cpp  TactileArray.h  TactileSensor.cpp  TactileSensor.h  TaxelMapping.cpp  TaxelMapping.h  TaxelSelector.cpp  TaxelSelector.h  glovesvgpainter.cpp  glovesvgpainter.h  (+11 more)
linux/config/: tactile_to_js_mapping.yaml  tactile_to_synergy_mapping.yaml
linux/console/: CMakeLists.txt  Makefile  P2.calib.yaml  console.cpp  main.cpp  simple_console.cpp
linux/launch/: goniometers.launch  tactile_to_synergy.launch
linux/lib/: CMakeLists.txt  ColorMap.cpp  ColorMap.h  FileInput.cpp  FileInput.h  GloveWidget.cpp  GloveWidget.h  RandomInput.cpp  RandomInput.h  SerialInput.cpp  SerialInput.h  TaxelMapping.cpp  TaxelMapping.h  TaxelMappingTools.cpp  TaxelMappingTools.h  tactile_glove.pc.in  tactile_gloveConfig.cmake.in  tactile_gloveConfigVersion.cmake.in  taxel.cfg
linux/libio/: CMakeLists.txt  FileInput.cpp  FileInput.h  InputInterface.cpp  InputInterface.h  RandomInput.cpp  RandomInput.h  Rate.cpp  Rate.h  SerialInput.cpp  SerialInput.h  ThrottledInput.h  TimeUtils.cpp  TimeUtils.h
linux/scripts/: tactile_to_js.py
linux_cpp/: GloveViz.pro  GloveViz.pro.user.2.3pre1  glovesvgpainter.cpp  glovesvgpainter.h  glovevizmainwindow.cpp  glovevizmainwindow.ui  main.cpp  seriallineconnector.cpp  seriallineconnector.h  svg-cairo-internal.h  svgglview.cpp  svgglview.h  svgint.h  svgwindow.cpp
win/: MainWindow.xaml  MainWindow.xaml.cs
win/Full/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TactileDataglove.csproj  TactileDataglove.sln
win/Full/Microchip USB CDC driver/: mchpcdc.inf
win/Full/Properties/: Resources.Designer.cs  Settings.Designer.cs
win/OnlySimulatedOutput/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  TactileDataglove.sln
win/OnlySimulatedOutput/Properties/: AssemblyInfo.cs  Resources.Designer.cs
win/Properties/: AssemblyInfo.cs
win/desktop/: MainWindow.xaml  MainWindow.xaml.cs  TactileDataglove.csproj
win/desktop/Properties/: Settings.Designer.cs
win/storeapp/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  TactileDatagloves.csproj  TactileDatagloves.sln
win/storeapp/Properties/: AssemblyInfo.cs
