<?xml version="1.0"?>
<package format="3">
  <name>tactile_glove</name>
  <version>0.1.0</version>
  <description>Bielefeld University TactileGlove software</description>
  <license>GPLv3</license>

  <!-- One author/maintainer tag required, multiple allowed, one person per tag --> 
  <author email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</author>
  <maintainer email="rhaschke@techfak.uni-bielefeld.de">Robert Haschke</maintainer>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="repository">https://github.com/ubi-agni/TactileGlove</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tactile_msgs</depend>
  <depend>tactile_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>libqt5-serialport</depend>
  <depend>libqt5-svg-dev</depend>
  <depend>libncurses-dev</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
